created new files and added created header

--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gulp</title>
+    <title>Your style</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="menu">
+                <div class="logo">
+                    <a class="logo__link" href="#">
+                        <img class="logo__img" src="images/Logo.svg" alt="logo image">
+                    </a>
+                </div>
+                <a class="menu__title" href="#">Фабрика потолков</a>
+                <ul class="menu__list">
+                    <li class="menu__list-item"><a href="#" class="menu__list-links">Каталог</a></li>
+                    <li class="menu__list-item"><a href="#" class="menu__list-links">Услуги</a></li>
+                    <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
+                    <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
+                    <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
+                    <li class="menu__list-item"><a href="#" class="menu__list-links">О компании</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
 
     <script src="js/main.min.js"></script>
