Added some styles and header was change

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">О компании</a></li>
                 </ul>
+                <button class="menu__btn">|||</button>
             </div>
         </div>
     </header>
