created submenu and added some styles

--- a/app/index.html
+++ b/app/index.html
@@ -21,12 +21,33 @@
                 </div>
                 <a class="menu__title" href="#">Фабрика потолков</a>
                 <ul class="menu__list">
-                    <li class="menu__list-item"><a href="#" class="menu__list-links">Каталог</a></li>
-                    <li class="menu__list-item"><a href="#" class="menu__list-links">Услуги</a></li>
+                    <li class="menu__list-item"><a href="#"
+                            class="menu__list-links menu__list-links--burger-icon">Каталог</a>
+                        <ul class="menu__submenu">
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Каталог 1</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Каталог 2</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Каталог 3</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Каталог 4</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Каталог 5</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menu__list-item"><a href="#"
+                            class="menu__list-links menu__list-links--burger-icon">Услуги</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
-                    <li class="menu__list-item"><a href="#" class="menu__list-links">О компании</a></li>
+                    <li class="menu__list-item"><a href="#" class="menu__list-links menu__list-links--burger-icon">О
+                            компании</a></li>
                 </ul>
                 <button class="menu__btn">|||</button>
             </div>
