created new section and styles

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
                             class="menu__list-links menu__list-links--burger-icon">Каталог</a>
                         <ul class="menu__submenu">
                             <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Каталог 1</a>
+                                    href="#">Каталог</a>
                             </li>
                             <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
                                     href="#">Каталог 2</a>
@@ -42,17 +42,80 @@
                         </ul>
                     </li>
                     <li class="menu__list-item"><a href="#"
-                            class="menu__list-links menu__list-links--burger-icon">Услуги</a></li>
+                            class="menu__list-links menu__list-links--burger-icon">Услуги</a>
+                        <ul class="menu__submenu">
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Услуги</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Услуги 2</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Услуги 3</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Услуги 4</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                    href="#">Услуги 5</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
                     <li class="menu__list-item"><a href="#" class="menu__list-links menu__list-links--burger-icon">О
-                            компании</a></li>
+                            компании</a>
+                        <ul class="menu__submenu menu__submenu--position-right">
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
+                                    компании</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
+                                    компании 2</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
+                                    компании 3</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
+                                    компании 4</a>
+                            </li>
+                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
+                                    компании 5</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 <button class="menu__btn">|||</button>
             </div>
         </div>
     </header>
+    <main class="main">
+        <section class="content">
+            <div class="content__inner">
+                <div class="container">
+                    <div class="content__top">
+                        <a class="content__order-link" href="#">Заказать звонок</a>
+                        <ul class="content__social-list">
+                            <li class="content__social-item"><a class="content__social-links" href="#">WhatsApp</a></li>
+                            <li class="content__social-item"><a class="content__social-links" href="#">Telegram</a></li>
+                            <li class="content__social-item"><a class="content__social-links"
+                                    href="tel:8 800 222-11-97">8 800 222-11-97</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="content__banner">
+                <div class="container">
+                    <h1>Натяжные потолки</h1>
+                    <h2>в Москве и МО, от 100 ₽/м2</h2>
+                    <div class="content__service">
+                        <img class="content__service-img" src="" alt="">
+                        <div class="content__service-text"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
     <script src="js/main.min.js"></script>
