added some styles and changed class name

--- a/app/index.html
+++ b/app/index.html
@@ -91,26 +91,28 @@
     </header>
     <main class="main">
         <section class="content">
-            <div class="content__inner">
+            <div class="content__header">
                 <div class="container">
                     <div class="content__top">
-                        <a class="content__order-link" href="#">Заказать звонок</a>
-                        <ul class="content__social-list">
-                            <li class="content__social-item"><a class="content__social-links" href="#">WhatsApp</a></li>
-                            <li class="content__social-item"><a class="content__social-links" href="#">Telegram</a></li>
-                            <li class="content__social-item"><a class="content__social-links"
-                                    href="tel:8 800 222-11-97">8 800 222-11-97</a></li>
-                        </ul>
+                        <a class="content__order-call" href="#">Заказать звонок</a>
+                        <div class="content__social">
+                            <div class="content__social-item content__social-item--whatsup">WhatsApp</div>
+                            <div class="content__social-item content__social-item--telegram">Telegram</div>
+                            <div class="content__social-item content__social-item--phone"><a class="phone"
+                                    href="tel:+88002221197">8 800 222-11-97</a></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="content__banner">
                 <div class="container">
-                    <h1>Натяжные потолки</h1>
-                    <h2>в Москве и МО, от 100 ₽/м2</h2>
-                    <div class="content__service">
-                        <img class="content__service-img" src="" alt="">
-                        <div class="content__service-text"></div>
+                    <div class="content__wrap">
+                        <h1 class="content__title">Натяжные потолки</h1>
+                        <h2 class="content__subtitle">в Москве и МО, от 100 ₽/м2</h2>
+                        <div class="content__service">
+                            <img class="content__service-img" src="" alt="">
+                            <div class="content__service-text"></div>
+                        </div>
                     </div>
                 </div>
             </div>
