--- a/app/index.html
+++ b/app/index.html
@@ -96,8 +96,10 @@
                     <div class="content__top">
                         <a class="content__order-call" href="#">Заказать звонок</a>
                         <div class="content__social">
-                            <div class="content__social-item content__social-item--whatsup">WhatsApp</div>
-                            <div class="content__social-item content__social-item--telegram">Telegram</div>
+                            <div class="content__social-item content__social-item--whatsup"><a href=""> WhatsApp</a>
+                            </div>
+                            <div class="content__social-item content__social-item--telegram"><a href="">Telegram</a>
+                            </div>
                             <div class="content__social-item content__social-item--phone"><a class="phone"
                                     href="tel:+88002221197">8 800 222-11-97</a></div>
                         </div>
@@ -110,9 +112,17 @@
                         <h1 class="content__title">Натяжные потолки</h1>
                         <h2 class="content__subtitle">в Москве и МО, от 100 ₽/м2</h2>
                         <div class="content__service">
-                            <img class="content__service-img" src="" alt="">
-                            <div class="content__service-text"></div>
+                            <img class="content__service-img" src="images/operator.png" alt="operator img">
+                            <div class="content__service-text">Я рассчитаю потолок и пришлю <span>купон на 5 000 ₽
+                                    в подарок</span> на WhatsApp в течение 5 минут!</div>
                         </div>
+                        <form class="content__form" method="post">
+                            <input class="content__form-input" type="tel" name="" placeholder="Введите ваш номер*">
+                            <input class="content__form-btn" type="button" value="Получить расчёт и подарок">
+                        </form>
+                        <a class="content__banner-link" href="#">Перейти на сайт</a>
+                        <p class="content__text-info">Оставляя контактную информацию, вы соглашаетесь на 
+                            <a href="#0">обработку персональных данных</a></p>
                     </div>
                 </div>
             </div>
