--- a/app/index.html
+++ b/app/index.html
@@ -20,72 +20,85 @@
                     </a>
                 </div>
                 <a class="menu__title" href="#">Фабрика потолков</a>
-                <ul class="menu__list">
-                    <li class="menu__list-item"><a href="#"
-                            class="menu__list-links menu__list-links--burger-icon">Каталог</a>
-                        <ul class="menu__submenu">
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Каталог</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Каталог 2</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Каталог 3</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Каталог 4</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Каталог 5</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu__list-item"><a href="#"
-                            class="menu__list-links menu__list-links--burger-icon">Услуги</a>
-                        <ul class="menu__submenu">
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Услуги</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Услуги 2</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Услуги 3</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Услуги 4</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                    href="#">Услуги 5</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
-                    <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
-                    <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
-                    <li class="menu__list-item"><a href="#" class="menu__list-links menu__list-links--burger-icon">О
-                            компании</a>
-                        <ul class="menu__submenu menu__submenu--position-right">
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
-                                    компании</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
-                                    компании 2</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
-                                    компании 3</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
-                                    компании 4</a>
-                            </li>
-                            <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links" href="#">О
-                                    компании 5</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <button class="menu__btn">|||</button>
+                <div class="menu__list-wrap">
+                    <button class="menu__cancel-btn"><img src="images/cancel.svg" alt="cancel icon"></button>
+                    <div class="logo list-logo">
+                        <a class="logo__link" href="#">
+                            <img class="logo__img" src="images/Logo.svg" alt="logo image">
+                        </a>
+                    </div>
+                    <ul class="menu__list">
+                        <li class="menu__list-item"><a href="#"
+                                class="menu__list-links menu__list-links--burger-icon">Каталог</a>
+                            <ul class="menu__submenu">
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Каталог</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Каталог 2</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Каталог 3</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Каталог 4</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Каталог 5</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="menu__list-item"><a href="#"
+                                class="menu__list-links menu__list-links--burger-icon">Услуги</a>
+                            <ul class="menu__submenu">
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Услуги</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Услуги 2</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Услуги 3</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Услуги 4</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">Услуги 5</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
+                        <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
+                        <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
+                        <li class="menu__list-item"><a href="#" class="menu__list-links menu__list-links--burger-icon">О
+                                компании</a>
+                            <ul class="menu__submenu menu__submenu--position-right">
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">О
+                                        компании</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">О
+                                        компании 2</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">О
+                                        компании 3</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">О
+                                        компании 4</a>
+                                </li>
+                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                        href="#">О
+                                        компании 5</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <button class="menu__btn"><img src="images/menu-btn-icon.svg" alt="hamburger"></button>
             </div>
         </div>
     </header>
@@ -96,10 +109,12 @@
                     <div class="content__top">
                         <a class="content__order-call" href="#">Заказать звонок</a>
                         <div class="content__social">
-                            <div class="content__social-item content__social-item--whatsup"><a href=""> WhatsApp</a>
-                            </div>
-                            <div class="content__social-item content__social-item--telegram"><a href="">Telegram</a>
-                            </div>
+                            <a href="#" class="content__social-item content__social-item--whatsup"><span class="social__item">
+                                    WhatsApp</span>
+                            </a>
+                            <a href="#" class="content__social-item content__social-item--telegram"><span
+                                    class="social__item">Telegram</span>
+                            </a>
                             <div class="content__social-item content__social-item--phone"><a class="phone"
                                     href="tel:+88002221197">8 800 222-11-97</a></div>
                         </div>
@@ -121,8 +136,9 @@
                             <input class="content__form-btn" type="button" value="Получить расчёт и подарок">
                         </form>
                         <a class="content__banner-link" href="#">Перейти на сайт</a>
-                        <p class="content__text-info">Оставляя контактную информацию, вы соглашаетесь на 
-                            <a href="#0">обработку персональных данных</a></p>
+                        <p class="content__text-info">Оставляя контактную информацию, вы соглашаетесь на
+                            <a href="#0">обработку персональных данных</a>
+                        </p>
                     </div>
                 </div>
             </div>
