created modal box and navbar has changed

--- a/app/index.html
+++ b/app/index.html
@@ -22,81 +22,84 @@
                 <a class="menu__title" href="#">Фабрика потолков</a>
                 <div class="menu__list-wrap">
                     <button class="menu__cancel-btn"><img src="images/cancel.svg" alt="cancel icon"></button>
-                    <div class="logo list-logo">
-                        <a class="logo__link" href="#">
-                            <img class="logo__img" src="images/Logo.svg" alt="logo image">
-                        </a>
-                    </div>
-                    <ul class="menu__list">
-                        <li class="menu__list-item"><a href="#"
-                                class="menu__list-links menu__list-links--burger-icon">Каталог</a>
-                            <ul class="menu__submenu">
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Каталог</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Каталог 2</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Каталог 3</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Каталог 4</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Каталог 5</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="menu__list-item"><a href="#"
-                                class="menu__list-links menu__list-links--burger-icon">Услуги</a>
-                            <ul class="menu__submenu">
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Услуги</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Услуги 2</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Услуги 3</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Услуги 4</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">Услуги 5</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
-                        <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
-                        <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
-                        <li class="menu__list-item"><a href="#" class="menu__list-links menu__list-links--burger-icon">О
-                                компании</a>
-                            <ul class="menu__submenu menu__submenu--position-right">
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">О
-                                        компании</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">О
-                                        компании 2</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">О
-                                        компании 3</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">О
-                                        компании 4</a>
-                                </li>
-                                <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
-                                        href="#">О
-                                        компании 5</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <nav class="menu__navbar">
+                        <div class="logo list-logo">
+                            <a class="logo__link" href="#">
+                                <img class="logo__img" src="images/Logo.svg" alt="logo image">
+                            </a>
+                        </div>
+                        <ul class="menu__list">
+                            <li class="menu__list-item"><a href="#"
+                                    class="menu__list-links menu__list-links--burger-icon">Каталог</a>
+                                <ul class="menu__submenu">
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Каталог</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Каталог 2</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Каталог 3</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Каталог 4</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Каталог 5</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="menu__list-item"><a href="#"
+                                    class="menu__list-links menu__list-links--burger-icon">Услуги</a>
+                                <ul class="menu__submenu">
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Услуги</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Услуги 2</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Услуги 3</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Услуги 4</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">Услуги 5</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-links">Калькулятор</a></li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-links">Скидки</a></li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-links">Фото</a></li>
+                            <li class="menu__list-item"><a href="#"
+                                    class="menu__list-links menu__list-links--burger-icon">О
+                                    компании</a>
+                                <ul class="menu__submenu menu__submenu--position-right">
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">О
+                                            компании</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">О
+                                            компании 2</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">О
+                                            компании 3</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">О
+                                            компании 4</a>
+                                    </li>
+                                    <li class="menu__submenu-item"><a class="menu__submenu-links menu__list-links"
+                                            href="#">О
+                                            компании 5</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
                 <button class="menu__btn"><img src="images/menu-btn-icon.svg" alt="hamburger"></button>
             </div>
@@ -107,9 +110,10 @@
             <div class="content__header">
                 <div class="container">
                     <div class="content__top">
-                        <a class="content__order-call" href="#">Заказать звонок</a>
+                        <a class="content__order-call">Заказать звонок</a>
                         <div class="content__social">
-                            <a href="#" class="content__social-item content__social-item--whatsup"><span class="social__item">
+                            <a href="#" class="content__social-item content__social-item--whatsup"><span
+                                    class="social__item">
                                     WhatsApp</span>
                             </a>
                             <a href="#" class="content__social-item content__social-item--telegram"><span
@@ -139,6 +143,20 @@
                         <p class="content__text-info">Оставляя контактную информацию, вы соглашаетесь на
                             <a href="#0">обработку персональных данных</a>
                         </p>
+                    </div>
+                    <div class="content__popup">
+                        <div class="container">
+                            <div class="popup__wrap">
+                                <a class="popup__cancel-btn popup__btn"><img src="images/cancel-black.svg"
+                                        alt="cancel icon"></a>
+                                <h1 class="popup__title">Заказать звонок</h1>
+                                <form class="content__form" method="post">
+                                    <input class="content__form-input" type="tel" name="" placeholder="Ваш телефон*">
+                                    <input class="content__form-btn" type="button" value="Заказать звонок">
+                                </form>
+                                <a class="content__banner-link popup__btn">Закрыть</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
