added new files and created new page

--- a/app/thanks.html
+++ b/app/thanks.html
@@ -125,9 +125,33 @@
                     </div>
                 </div>
             </div>
-            <div class="content__banner thanks_page">
+            <div class="thankful__wrap">
                 <div class="container">
-
+                    <div class="thankful__inner">
+                        <div class="thankful__caption">
+                            <h1 class="thankful__subtitle">Спасибо!</h1>
+                            <h2 class="thankful__title">Ваша заявка принята</h2>
+                            <button class="content__form-btn thankful__btn">Перейти на сайт</button>
+                        </div>
+                        <div class="thankful__item-wrap">
+                            <div class="thankful__item">
+                                <img class="thankful__item-img" src="images/item-img1@2x.svg" alt="item img">
+                                <h3 class="thankful__item-title">Выезд мастера бесплатно!</h3>
+                            </div>
+                            <div class="thankful__item">
+                                <img class="thankful__item-img" src="images/item-img2.svg" alt="item img">
+                                <h3 class="thankful__item-title">Договор на дому</h3>
+                            </div>
+                            <div class="thankful__item">
+                                <img class="thankful__item-img" src="images/item-img3.svg" alt="item img">
+                                <h3 class="thankful__item-title">Сертификаты</h3>
+                            </div>
+                            <div class="thankful__item">
+                                <img class="thankful__item-img" src="images/item-img4.svg" alt="item img">
+                                <h3 class="thankful__item-title">Гарантия 15 лет</h3>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="content__popup">
                     <div class="container">
