--- a/app/thanks.html
+++ b/app/thanks.html
@@ -131,7 +131,7 @@
                         <div class="thankful__caption">
                             <h1 class="thankful__subtitle">Спасибо!</h1>
                             <h2 class="thankful__title">Ваша заявка принята</h2>
-                            <button class="content__form-btn thankful__btn">Перейти на сайт</button>
+                            <a class="content__form-btn thankful__btn" href="/">Перейти на сайт</a>
                         </div>
                         <div class="thankful__item-wrap">
                             <div class="thankful__item">
